new changes of v3

--- a/chats.html
+++ b/chats.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>chats</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe at officia debitis recusandae distinctio eos aperiam mollitia doloremque, similique possimus est facilis suscipit, asperiores reprehenderit neque nostrum veritatis corrupti nihil?</p>
 </body>
 </html>
