--- a/settings.html
+++ b/settings.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Settings</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi consequatur quisquam expedita maiores dolorem quo nam hic facere sint. Ducimus quibusdam accusamus numquam nulla earum delectus, omnis soluta. Quos, at.</p>
 </body>
 </html>
